Alignment fixed.

--- a/style.less
+++ b/style.less
@@ -46,12 +46,12 @@
     display: inline-block;
     position: relative;
     background: white;
-
     text-transform: uppercase;
     font-family: 'Montserrat', sans-serif;
     font-smoothing: antialiased;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    text-align: left;
 
     &__head {
         font-size: 30px;
